kubernetes/api_management/apistack-standalone/apigateway-standalone.yaml
# Configuration for deploying an API Gateway with an embedded elasticsearch to a kubernetes cluster.
# The cluster should provide at least 4 GB of main memory.
---
apiVersion: v1
kind: Service
metadata:
  name: webmethods-apigateway-standalone
spec:
  type: ClusterIP
  ports:
    - port: 9072
      protocol: TCP
      name: gwui
    - port: 5555
      protocol: TCP
      name: gwruntime
  selector:
    app.kubernetes.io/name: webmethods-apigateway-standalone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webmethods-apigateway-standalone
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webmethods-apigateway-standalone
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webmethods-apigateway-standalone
    spec:
      securityContext:
        runAsUser: 1724
        runAsGroup: 1724
        fsGroup: 1724
      containers:
        - name: webmethods-apigateway-standalone
          securityContext:
            allowPrivilegeEscalation: false
          image: 815840818766.dkr.ecr.us-east-1.amazonaws.com/webmethods-apigateway-standalone:dev-10.7.2-36
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5555
              name: gwruntime
              protocol: TCP
            - containerPort: 9072
              name: gwui
              protocol: TCP
          startupProbe:
            failureThreshold: 30
            exec:
              command:
                - /bin/bash
                - ./healthcheck.sh
          livenessProbe:
            exec:
              command:
                - /bin/bash
                - ./healthcheck.sh
          resources:
            requests:
              memory: 2Gi
              cpu: 1
            limits:
              memory: 3Gi
              cpu: 2
          volumeMounts:
            - name: wm-derbydb-volume
              mountPath: /opt/softwareag/IntegrationServer/instances/default/db
              subPath: wmderbydb
            - name: webmethods-apigateway-standalone
              mountPath: /opt/softwareag/InternalDataStore/data
              subPath: elastic
      volumes:
        - name: wm-derbydb-volume
          emptyDir:
            sizeLimit: 5Gi
        - name: webmethods-apigateway-standalone
          persistentVolumeClaim:
            claimName: webmethods-apigateway-standalone
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webmethods-apigateway-standalone
  labels:
    app.kubernetes.io/name: webmethods-apigateway-standalone
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: webmethods-apigateway.demo1.apimgt.cloud
      http:
        paths:
          - path: /gateway
            pathType: Prefix
            backend:
              service:
                name: webmethods-apigateway-standalone
                port:
                  number: 5555
          - path: /rest
            pathType: Prefix
            backend:
              service:
                name: webmethods-apigateway-standalone
                port:
                  number: 5555
          - path: /invoke
            pathType: Prefix
            backend:
              service:
                name: webmethods-apigateway-standalone
                port:
                  number: 5555
          - path: /WmAPIGateway
            pathType: Prefix
            backend:
              service:
                name: webmethods-apigateway-standalone
                port:
                  number: 5555

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webmethods-apigateway-standalone
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`webmethods-apigateway.demo1.apimgt.cloud`)
      kind: Rule
      services:
        - name: webmethods-apigateway-standalone
          port: 9072
          passHostHeader: true
          sticky:
            cookie:
              name: sticky
